[gd_scene load_steps=12 format=2]

[ext_resource path="res://Managing/Colliders/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Items/Weapons/Bullet/AltBullets/Boomerang/Boomerang.gd" type="Script" id=2]
[ext_resource path="res://Items/Weapons/Sprites/HomingBoomerang.png" type="Texture" id=3]
[ext_resource path="res://Items/Weapons/Bullet/BulletParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/VisualEffects/Smoke.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.33
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 2.0
anim_offset_random = 0.09

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[sub_resource type="CircleShape2D" id=5]
radius = 1.0

[sub_resource type="CircleShape2D" id=8]
radius = 1.0

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Particles" parent="." instance=ExtResource( 4 )]
z_index = 0

[node name="Trail" type="Particles2D" parent="."]
material = SubResource( 1 )
amount = 32
fixed_fps = 16
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="Hitbox" parent="." groups=[
"playerBullet",
] instance=ExtResource( 1 )]
visible = false
collision_layer = 2
collision_mask = 4
maskedHurtbox = "player"

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 4 )

[node name="QueueArea" type="Area2D" parent="." groups=[
"PlayerBullet",
]]
visible = false
collision_layer = 2
collision_mask = 32769

[node name="CollisionShape2D" type="CollisionShape2D" parent="QueueArea"]
shape = SubResource( 5 )

[node name="Kill" type="StaticBody2D" parent="."]
position = Vector2( -11, 0 )
collision_layer = 32768
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kill"]
shape = SubResource( 8 )

[node name="DieTween" type="Tween" parent="."]

[node name="Lifetime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="hit_object" from="Hitbox" to="." method="_on_Hitbox_hit_object"]
[connection signal="body_entered" from="QueueArea" to="." method="_on_QueueArea_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]

[editable path="Hitbox"]
